[package]
name = "gitstu"
version = "0.1.0"
authors = ["Jacob Biggs <biggs.jacob@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
dialoguer = "0.5.0"
itertools = "0.8.2"
